# tdd-cpp-solutions

./: .gitmodules  README.md
.github/workflows/: main.yml
solutions/exercise1/src/: Buffer.cpp  Buffer.h  TemplateBuffer.h  meson.build
solutions/exercise1/tests/: buffer_tests.cpp  meson.build  template_buffer_tests.cpp  testdef.h
solutions/exercise2_doctest/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
solutions/exercise2_doctest/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
solutions/exercise2_doctest/builddir/meson-logs/: meson-log.txt  testlog.json  testlog.junit.xml  testlog.txt
solutions/exercise2_doctest/builddir/meson-private/: coredata.dat.prev
solutions/exercise2_doctest/builddir/src/: app
solutions/exercise2_doctest/builddir/tests/: ds1820
solutions/exercise2_doctest/src/: ds1820.cpp  ds1820.h  lcd.cpp  lcd.h  main.cpp  meson.build  temperature_sensor.cpp  temperature_sensor.h
solutions/exercise2_doctest/tests/: meson.build  test_ds1820.cpp  test_temperature_sensor.cpp
solutions/exercise2_doctest_fakeit/: meson.build
solutions/exercise2_doctest_fakeit/.devcontainer/: Dockerfile
solutions/exercise2_doctest_fakeit/tests/: display_stub.cpp  meson.build  test_temperature_sensor.cpp
solutions/exercise2_doctest_tromeloeil/tests/: meson.build  test_temperature_sensor.cpp
solutions/exercise2_gmock_as_stub/: meson.build
solutions/exercise2_gmock_as_stub/tests/: meson.build  test_temperature_sensor.cpp
solutions/exercise2_gtest/tests/: display_stub.h  ds1820.cpp  lcd.cpp  meson.build  test_temperature_sensor.cpp  test_temperature_sensor_fixture.cpp
solutions/exercise3/: closed2closed-button.uml  closed2open-normal.uml  msd.docx  open2close-button-interrupt.uml  open2close-normal.uml  smd.uml
solutions/exercise4_fakeit/: meson.build
solutions/exercise4_fakeit/.devcontainer/: Dockerfile
solutions/exercise4_fakeit/tests/: meson.build  test_temperature_sensor.cpp
solutions/exercise4_fakeit_doctest/: meson.build
solutions/exercise4_fakeit_doctest/tests/: meson.build  test_temperature_sensor.cpp
solutions/exercise4_gmock/.devcontainer/: devcontainer.json
solutions/exercise4_gmock/plantuml/: init_activity.uml
solutions/exercise4_gmock/src/: temperature_sensor.cpp
solutions/exercise4_gmock/tests/: meson.build  test_temperature_sensor.cpp
solutions/exercise5_doctest/inc/: Led.h
solutions/exercise5_doctest/src/: GarageDoorOpener.cpp  Opening.cpp  StateMachine.cpp  StoppedOpening.cpp
solutions/exercise5_doctest/tests/: test_gdo.cpp
solutions/exercise5_gmock/: .gitignore
solutions/exercise5_gmock/.devcontainer/: devcontainer.json
solutions/exercise5_gmock/inc/: IDisplay.h  ISensor.h
solutions/exercise5_gmock/src/: temperature_sensor.h
solutions/exercise5_gmock/tests/: Sensor_adaptor.cpp  meson.build  test_temperature_sensor.cpp  test_temperature_sensor_full_mocks.cpp
solutions/exercise6_doctest/inc/: motor.h
solutions/exercise6_doctest/src/: Closed.cpp  Closing.cpp  Open.cpp  StateMachine.h  StoppedClosing.cpp  main.cpp
solutions/exercise6_gmock/inc/: Sensor_Adaptor.h
solutions/exercise6_gmock/src/: temperature_sensor.cpp
solutions/exercise6_gmock/tests/: ds1820.cpp  test_temperature_sensor.cpp
